Coming soon page done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,37 @@
-<html>
-  <body>
-     <h1>Etta Design</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Etta Design - Coming Soon</title>
+
+  <link href="favicon.png" rel="icon" type="image/png" />
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+  <div class="wrapper">
+    <div class="wrapper-innner">
+        <div class="block">
+          <h1>Coming Soon</h1>
+        </div>
+        <div class="block">
+          <img src="img/logo.png" alt="Etta Design Logo" class="logo">
+        </div>
+        <div class="block">
+          <div class="block__inner-block">
+            <h2>Dress Your Bones</h2>
+          </div>
+          <div class="block__inner-block">
+            <a class="button" href="mailto:info@ettadesign.com.au" target="_blank">Contact Us</a>
+          </div>
+          <div class="block__inner-block">
+            <a class="social-icon" href="#" target="_blank"><img src="img/facebook.png"></a>
+            <a class="social-icon" href="#" target="_blank"><img src="img/instagram.png"></a>
+          </div>
+        </div>
+    </div>
+  </div>
+</body>
 </html>
