--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <a class="button" href="mailto:info@ettadesign.com.au" target="_blank">Contact Us</a>
           </div>
           <div class="block__inner-block">
-            <a class="social-icon" href="#" target="_blank"><img src="img/facebook.png"></a>
-            <a class="social-icon" href="#" target="_blank"><img src="img/instagram.png"></a>
+            <a class="social-icon" href="https://www.facebook.com/designbyetta/" target="_blank"><img src="img/facebook.png"></a>
+            <a class="social-icon" href="https://instagram.com/etta.design" target="_blank"><img src="img/instagram.png"></a>
           </div>
         </div>
     </div>
