Update contact email

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Dress Your Bones</h2>
           </div>
           <div class="block__inner-block">
-            <a class="button" href="mailto:info@ettadesign.com.au" target="_blank">Contact Us</a>
+            <a class="button" href="mailto:etta@ettadesign.com.au" target="_blank">Contact Us</a>
           </div>
           <div class="block__inner-block">
             <a class="social-icon" href="https://www.facebook.com/designbyetta/" target="_blank"><img src="img/facebook.png"></a>
